test/TypeError/multiplePrintWExp.java
// This example involves string literal printing, integer printing,
// and if-else branch execution.
// Indicated by the else branch, your interpretation should not print the line in it.
class simple {
    public static void main(String [] args) {
			{
            //System.out.println("Random Numbers:");
            System.out.println(----(-((-(---(-((-1 * 1)))))) - 2) * 3);
            System.out.println(-(-1 - 2) * 3);
            System.out.println(1 - 1 - 2 - 3);
            System.out.println(-+--+-(-+++((-(-+--(-((+-1 * +1)))))) - +++++++++++2) * -+-+-+-+(3));
            //System.out.println(30000);
			}
    }
}
